[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/HUD/Coins.png" type="Texture" id=1]
[ext_resource path="res://src/menu/End/Score.gd" type="Script" id=2]
[ext_resource path="res://assets/font/Xolonium-Regular-number.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/sound/Point.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="Score" type="Node2D"]
script = ExtResource( 2 )

[node name="CoinsLabel" type="Label" parent="."]
margin_left = 2.3811
margin_top = 3.96851
margin_right = 57.3811
margin_bottom = 23.9685
custom_fonts/font = SubResource( 1 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerCoins" type="Timer" parent="."]
wait_time = 0.15

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 71.4331, 14.2866 )
texture = ExtResource( 1 )

[node name="Bling" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="timeout" from="TimerCoins" to="." method="_on_TimerCoins_timeout"]
